# udp_video_monitor

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
